# genie-tooling-karta

./: .gitignore  README.md  pyproject.toml  showcase.py
karta-engine/: README.md  pyproject.toml  showcase.py
karta-engine/docs/: using_karta_engine.md
karta-engine/src/karta_for_genie/: bootstrap.py  interface.py  manager.py  types.py
karta-engine/src/karta_for_genie/dispatchers/impl/: llm_dispatchers.py  no_op_dispatchers.py  spacy_ner_dispatcher.py  wikipedia_dispatcher.py
karta-engine/src/karta_for_genie/tools/: entity_recognition_tool.py  fact_lookup_tool.py  summarization_tool.py
karta-engine/tests/: conftest.py  test_bootstrap.py  test_dispatchers.py  test_e2e.py  test_types.py
src/karta/: bootstrap.py  interface.py  manager.py
src/karta/dispatchers/: abc.py
src/karta/dispatchers/impl/: llm_dispatchers.py  no_op_dispatchers.py  spacy_ner_dispatcher.py  wikipedia_dispatcher.py  wolfram_dispatcher.py
src/karta/routing/: router.py
src/karta/tools/: entity_recognition_tool.py  summarization_tool.py
src/karta_for_genie/: manager.py
src/karta_for_genie/dispatchers/: abc.py
src/karta_for_genie/dispatchers/impl/: wolfram_dispatcher.py
src/karta_for_genie/routing/: router.py
src/karta_for_genie/types/: __init__.py
tests/: conftest.py  test_bootstrap.py  test_dispatchers.py  test_e2e.py  test_integration.py  test_types.py
tests/scaffolds/genie-tooling/src/genie_tooling/: genie.py
tests/scaffolds/genie-tooling/src/genie_tooling/core/: plugin_manager.py  types.py
